Thu Apr 29 15:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Fix URLs in documentation as suggested by Adam.
	* SQLClient.html: regenerate

Mon Apr 26 16:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	Initial checkin of library.